    	device on Mac OS X) and "cairo" (for cairo-based graphics
    	devices).

    o  The "MethodsList" objects originally used for method selection
        are being phased out.  New utilities provide simpler
        alternatives (see ?findMethods), and direct use of the mangled
        names for the objects is now deprecated.


DEPRECATED & DEFUNCT

    o	In package installation, SaveImage: yes is defunct and
	lazyloading is attempted instead.

    o	$ on an atomic vector or S4 object is now defunct.

    o	Partial matching in [[ is now only performed if explicitly
	requested (by exact=FALSE or exact=NA).

    o	Command-line completion has been moved from package 'rcompgen'
	to package 'utils': the former no longer exists as a separate
	package in the R distribution.

    o	The S4 pseudo-class "single" has been removed.
	["double" will follow shortly:	the S4 class for a REALSXP is
	"numeric".]

    o	Several S4 class definition utilities, get*(), have been said
	to be deprecated since R 1.8.0; these are now formally deprecated.
	Ditto for removeMethodsObject().

    o	Use of the graphics headers Rgraphics.h and Rdevices.h is
	deprecated, and these will be unavailable in R 2.8.0.
	(They are hardly used except in graphics devices, for which
	there is an updated API in this version of R.)

    o	options("par.ask.default") is deprecated in favour of
	"device.ask.default".

    o	The 'device-independent' family "symbol" is deprecated as it
	was highly locale-dependent (it only did something useful in
	single-byte locales) and font=5 (base) or fontface=5 (grid) did
	the job it was intended to do more reliably.

    o	gammaCody() is now formally deprecated.

    o  two low-level functions using MethodsList metadata objects
        (mlistMetaName() and getAllMethods()) are deprecated.


INSTALLATION

    o	Tcl/Tk >= 8.3 (released in 2000) is now required to build
	package tcltk.

    o	configure first tries TCL_INCLUDE_SPEC and TK_INCLUDE_SPEC