@@ -16,7 +16,7 @@
   computations that need to differentiate objects on multiple packages.
 }
 \usage{
-getPackageName(where)
+getPackageName(where, create = TRUE)
 
 packageSlot(object)
 packageSlot(object) <- value
@@ -27,6 +27,7 @@ packageSlot(object) <- value
   \item{object}{object providing a character string name, plus the
     package in which this object is to be found.}
   \item{value}{the name of the package.}
+    \item{create}{flag, should a package name be created if none can be inferred.  If ]\code{TRUE} and no non-empty package name is found, the current date and time are used as a package name, and a warning is issued. }
 }
 \details{
   Package names are normally installed during loading of the package,
